# ihna_project

./: README.md  classification_resting_state.ipynb  cluster_test.ipynb  dataset.py  eeg_lib.py  ihna_age_prediction.ipynb  ihna_classification_mat_versus_hum_resting_state.ipynb  ihna_classification_mat_versus_hum_tasks.ipynb  ihna_mat_not_mat.ipynb  imp_n-2.ipynb  mat_not_mat_classification_final.ipynb  models.py  pyproject.toml  requirements.txt  settings.py  setup.py  subjects_results.xlsx  transformers.py
.ipynb_checkpoints/: cluster_test-checkpoint.ipynb
Results/: age_prediction.ipynb  ind_tasks_log_reg  m_dict_csp.pkl  m_dict_csp_r.pkl  m_dict_f.pkl  m_dictf.pkl  m_dictf2.pkl  mat1.pkl  not_mat1.pkl  res_dict_f.pkl  res_dict_сsp.pkl  res_dict_сsp_r.pkl  res_dictf.pkl  res_dictf2.pkl
ihna_project/: eeg_lib.py  models.py  settings.py  setup.py  transformers.py
notebooks/: assr.ipynb  ihna_age_prediction.ipynb  ihna_classification_mat_versus_hum_resting_state.ipynb  ihna_classification_mat_versus_hum_tasks.ipynb
